update
Added "About Restaurant" feature with review loading and menu block functionality for Telegram bot:

- Implemented the "/start" command to display the main menu in the Telegram bot.
- Added the "About Restaurant" button in the bot that displays restaurant information and loads the latest positive reviews.
- Enabled navigation through reviews with "prev" and "next" buttons in the bot.
- Implemented a menu block in the bot where users can select a category of dishes.
- Added the "All Dishes" button in the bot to display all dishes by category without images.

Updated the logic for handling reviews and menu specifically for the Telegram bot.